--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,68 @@
 input[type=text] {
     transition: width 0.4s ease-in-out;
     text-align:center;
+    display: table;
+    margin: 0 auto;
 }
 
 input [type=text]:focus {
     width:100%;
 }
+
+
+ul {
+    color:aliceblue;
+    font-weight:bold;
+    font-size: 24px;
+    font-family: 'Franklin Gothic Medium';
+    list-style-position:inside;
+}
+
+button {
+    background-color: rgba(201, 225, 228, 0);
+    padding: 15px 32px;
+    display:inline-block;
+    border:none;
+    font-size: 20px;
+    color:aliceblue;
+    position: relative;
+    top:-2px;
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+        transform: translateX(-86px) scale(0.5);
+    } to {
+        opacity: 1;
+        transform: translateX(0) scale(1);
+    }    
+}
+
+@keyframes appearBottom {
+    from {
+        opacity: 0;
+        transform: translateY(26px) scale(0.5);
+    } to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+}
+
+.quote {
+    justify-content: center;
+    animation: appear .4s;
+}
+
+.clock {
+    animation: appear .4s;
+
+}
+
+.login {
+    animation: appearBottom .4s;
+}
+
+
+
+
