--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ input [type=text]:focus {
     width:100%;
 }
 
-
 ul {
     color:aliceblue;
     font-weight:bold;
@@ -24,7 +23,7 @@ ul {
 
 button {
     background-color: rgba(201, 225, 228, 0);
-    padding: 15px 32px;
+    padding: 10px 24px;
     display:inline-block;
     border:none;
     font-size: 20px;
@@ -60,7 +59,6 @@ button {
 
 .clock {
     animation: appear .4s;
-
 }
 
 .login {
@@ -68,5 +66,201 @@ button {
 }
 
 
+.background_controls .controls__colors {
+    display: flex;
+}
+
+.controls__colors .controls__color {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 3px 2px rgba(31, 32, 97, 0.466), 0 1px 3px rgba(5, 8, 61, 0.363);
+}
+
+.player {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.player-controls {
+    background-color:aliceblue;
+    border-radius: 15px;
+    width: 260px;
+    height: 70px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+    box-shadow: 0px 5px 85px 5px rgba(255, 255, 255, 0.644);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.song-panel {
+    background-color: rgba(240, 248, 255, 0);
+    border-radius: 15px 15px 0 0;
+    height: 60px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 12px 12px 12px;
+    transform: translate3d(0, 100%, 0);
+    transition: all 1s ease;
+    width: 250px;
+    z-index: 0;
+}
+
+.song-panel .song-info {
+    width: 250px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.song-panel .song-info .song-info__title {
+    font-weight: bold;
+    margin-bottom: 5px;
+    color:rgba(240, 248, 255, 0.658); 
+    font-size:14px;
+}
+
+.song-panel .song-info .song-info__artist {
+    margin-bottom: 10px;
+    color:rgba(240, 248, 255, 0.658); 
+    font-size:14px;
+}
+
+.song-panel .song-info .progress {
+    border-radius: 3px;
+    cursor: ew-resize;
+    display: flex;
+    flex: 10;
+    flex-basis: 100%;
+    max-height: 5px;
+    position: relative;
+    width: 100%;
+}
+.song-panel .song-info .progress .progress__filled {
+    background: blue;
+    flex: 0;
+    flex-basis: 0%;
+    width: 50%;
+}
 
 
+.play {
+    height: 50%;
+    width: 10px;
+    cursor: pointer; 
+    border: 3px black;
+    color: #BAC1E6;
+    margin: 0 5px;
+    border-radius: 10px;
+    opacity: 0.5;
+    transition: all .5s ease;
+    position: relative;
+    top:-15px;
+    left: -15px;
+}
+
+.backward {
+    height: 15px;
+    width: 15px;
+    cursor: pointer; 
+    border: 3px black;
+    color: #BAC1E6;
+    margin: 0 5px;
+    border-radius: 10px;
+    opacity: 0.5;
+    transition: all .5s ease;
+    position: relative;
+    top:-5px;
+    left: -19px;
+}
+.forward {
+    height: 10px;
+    width: 10px;
+    cursor: pointer; 
+    border: 3px black;
+    color: #BAC1E6;
+    margin: 0 5px;
+    border-radius: 10px;
+    opacity: 0.5;
+    transition: all .5s ease;
+    position: relative;
+    top:-5px;
+    left: -9px;
+}
+
+
+
+button.play i {
+    opacity: 1;
+    transition: opacity .5s ease;
+}
+
+button.play.playing i {
+    opacity: 0;
+    transition: all .5s ease;
+}
+.player-controls {
+    position: relative;
+}
+
+.player-controls .spinner {
+    height: 65px;
+    width: 65px;
+    position: absolute;
+    top: 2.5px;
+    left: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.player-controls .spinner.spin {
+    animation: spin 5s linear infinite;
+}
+
+.player-controls .spinner .spinner__disc {
+    height: 65px;
+    width: 65px;
+    border-radius: 50%;
+    transition: all 1s ease;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.player-controls .spinner .spinner__disc.scale {
+    transform: scale(1.17);
+    transition: all 1s ease;
+}
+
+.player-controls .spinner .spinner__disc.scale .center__disc {
+    color: #e4d6e9;
+    transition: all 1s ease;
+}
+
+.player-controls .spinner .spinner__disc .center__disc {
+    background-color: white;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+@-webkit-keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
